<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SVMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_shade_1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="gone">
        <LinearLayout
            android:id="@+id/LLMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/idIVIcon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="start"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dayOfWeekTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="20dp"
                        android:text="@string/today"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="20dp"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/idTVCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/idTVTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@string/_24_c"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/idTVFeels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="start"
                android:text="@string/feels_like"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                android:elevation="12dp"
                app:cardCornerRadius="45dp">

                <TextView
                    android:id="@+id/idTVCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/condition"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/pressureIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:src="@drawable/pressure"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/pressureTV"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:paddingStart="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/_20"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/humidityIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:src="@drawable/humidity"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/humidityTV"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:paddingStart="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/_20"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/windIV"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_wind"
                        app:tint="@color/white"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/windTV"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:paddingStart="4dp"
                        android:paddingEnd="0dp"
                        android:text="@string/_20_m_s"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/representationIV"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/todayTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/later_today"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tomTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tomorrow"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/todayTV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/todayTV3"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/todayTV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/todayTV4"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/todayTV5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/todayTV5"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/todayTV6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/todayTV6"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRVWeather6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
</ScrollView>